           These are now determined when needed in the script using the new commands mentioned above.
           NOTE: please update your personal scripts to reflect these changes.

           Removed the script api to the VOL plugin. This was redundant by other commands.

           QuoteServer restarts with the new settings if modified from the chart panel dialog.

           Re-arranged the script launcher buttons on the script panel from 2 rows to 3 so that we can shrink
           the size of the side panel a little more. Perhaps make it more customizable in the future.

20100727:  Updated docs with QuoteServer, CSV, Yahoo info and lots more.

           CSV plugin dialogs are now non blocking.

           Added a refresh option to restart the QuoteServer from the QuoteServerDialog.

20100728:  Delete chart object segs fixed.

20100729:  Spun off chart object dialog code into separate classes to enable non blocking versions.

20100906:  ************************** BIG CHANGES *********************************************
           Qtstalker now uses the Qwt charting library for all charting functions. http://qwt.sourceforge.net
           Please install the most recent version before compiling qtstalker. 

           ChartObjectDataBase format has changed. Please delete the chartObjectIndex table from the
           ~/.qtstalker/data.sqlite file before starting qtstalker. NOTE: There have been so many changes
           i have lost track, so it might be best to start with a fresh new install by deleting or renaming
           your ~/.qtstalker directory before starting it.

           All indicator dialogs have been recoded into non blocking versions.

           Removed Cursor / Chart Object toolbar. Use chart context menu.

           NOTE: Features not implemeted yet please see TODO priority list.

20100907:  Removed PrefDialog class from lib and replaced with all non blocking dialogs.
