@@ -35,7 +35,7 @@ class ChartObjectTLine : public ChartObject
     void info (Setting &);
     ChartObjectDialog * dialog ();
     int CUS (QStringList &);
-    void highLow (double &h, double &l);
+    int highLow (int start, int end, double &high, double &low);
 
   protected:
     QStringList _fieldList;
