@@ -33,7 +33,7 @@ class ChartObjectVLine : public ChartObject
     void info (Setting &);
     ChartObjectDialog * dialog ();
     int CUS (QStringList &);
-    void highLow (double &h, double &l);
+    int highLow (int start, int end, double &high, double &low);
 };
 
 #endif
